<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">LASAR Connect</string>

    <!--  BluetoothChat -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">Connecting&#8230;</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not Connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Choose Device</string>
    <string name="discoverable">Make discoverable</string>
	<string name="send">SEND</string>
	<string name="cmd3">Save Time</string>
	<string name="Brightness">Brightness</string>
	<string name="Value">Value</string>
	<string name="Blinds">Blinds</string>
	<string name="ToggleButton">ToggleButton</string>
	<string name="time">0:00</string>
	<string name="saveTime">Time To Save:</string>
	<string name="updateTime">Update Current Time</string>
	<string name="tSettings">Time Settings</string>
	<string name="logo">Team LASAR</string>
	<string name="roomselection">Back to Room Selection</string>
	<string name="roomName">Room 1</string>
	<string name="room1">Living Room</string>
	<string name="room2">Bed Room</string>
	<string name="room3">Kitchen</string>
	<string name="Room">Room 1</string>
</resources>
